image-text-content - added no gap option + fixes

--- a/blocks/buttons-with-image/style.scss
+++ b/blocks/buttons-with-image/style.scss
@@ -57,6 +57,7 @@
         }
 
         &:hover {
+            color: $white;
             text-decoration: none;
         }
     }
